force-app/main/default/objects/Relief_Valve_Control_Plan__c/Relief_Valve_Control_Plan__c.object-meta.xml
<CustomObject>
    <label>Relief Valve Control Plan</label>
    <nameField>
        <displayFormat>RVCP-{0000}</displayFormat>
        <label>Relieve  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relief Valve Control Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>