force-app/main/default/objects/Relief_Valve_Control_Plan__c/fields/Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Category_ID__c</fullName>
    <label>Category ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>