force-app/main/default/objects/Relief_Valve_Control_Plan__c/fields/Connected_To_Tool__c.field-meta.xml
<CustomField>
    <fullName>Connected_To_Tool__c</fullName>
    <label>Connected To Tool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>