force-app/main/default/objects/Relief_Valve_Control_Plan__c/fields/Data_Point__c.field-meta.xml
<CustomField>
    <fullName>Data_Point__c</fullName>
    <label>Data Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>