force-app/main/default/objects/Relief_Valve_Control_Plan__c/fields/Inner_Min__c.field-meta.xml
<CustomField>
    <fullName>Inner_Min__c</fullName>
    <label>Inner Min</label>
    <length>255</length>
    <type>Text</type>
</CustomField>