force-app/main/default/objects/Relief_Valve_Control_Plan__c/fields/Nominal_Value__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Value__c</fullName>
    <label>Nominal Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>