force-app/main/default/objects/Relief_Valve_Control_Plan__c/fields/Operation_Number__c.field-meta.xml
<CustomField>
    <fullName>Operation_Number__c</fullName>
    <label>Operation Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>