force-app/main/default/objects/Relief_Valve_Control_Plan__c/fields/Reciept_Not_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Reciept_Not_Allowed__c</fullName>
    <label>Reciept Not Allowed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>