force-app/main/default/objects/Relief_Valve_Control_Plan__c/fields/Tool_Id__c.field-meta.xml
<CustomField>
    <fullName>Tool_Id__c</fullName>
    <label>Tool Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>